Removed section about AI-Learning-Lab

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="text-sm sm:text-base md:text-lg space-y-3 sm:space-y-4 max-w-3xl text-center px-2 sm:px-4" id="bio">
                 <p data-i18n="bio.intro"></p>
                 <p data-i18n="bio.background"></p>
-                <p><span data-i18n="bio.aiLab"></span></p>
+                <!-- <p><span data-i18n="bio.aiLab"></span></p> -->
                 </div>
 
                 <div class="flex justify-center w-full">
@@ -53,7 +53,7 @@
                         <i class="fab fa-linkedin"></i>
                         <span data-i18n="contact.linkedin"></span>
                     </a>
-                    <a href="https://github.com/YourGitHubUsername" target="_blank" rel="noopener noreferrer" class="link-button px-6 py-3 text-primary-color">
+                    <a href="https://github.com/SytzeSimonse" target="_blank" rel="noopener noreferrer" class="link-button px-6 py-3 text-primary-color">
                         <i class="fab fa-github"></i>
                         <span data-i18n="contact.github"></span>
                     </a>
