--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     "<span data-i18n="mission"></span>"
                 </div>
 
-                <div class="contact-box p-4 sm:p-6">
-                <p id="location" class="mb-4"></p>
+                <div class="contact-box p-4 sm:p-1">
+                <p id="location" class="mb-4" data-i18n="contact.location"></p>
                 <div class="flex flex-wrap justify-center gap-3 sm:gap-6">
                     <a href="mailto:sytze.simonse@proton.me" class="link-button px-6 py-3 text-primary-color">
                         <i class="fas fa-envelope"></i>
