--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                         <i class="fab fa-github"></i>
                         <span data-i18n="contact.github"></span>
                     </a>
+                     <a href="https://gis.stackexchange.com/users/147844/sytze" target="_blank" rel="noopener noreferrer" class="link-button px-6 py-3 text-primary-color">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <span data-i18n="contact.gis">GIS SE</span>
+                    </a>
                 </div>
                 <p class="text-sm text-gray-400 text-center" data-i18n="contact.kvk"></p>
                 </div>
