Added section about Bonsai

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                     <!-- <p><span data-i18n="bio.aiLab"></span></p> -->
                 </div>
 
+                <div class="project-section text-sm sm:text-base md:text-lg space-y-3 sm:space-y-4 max-w-3xl text-center md:text-left px-2 sm:px-4 mt-6">
+                    <h2 class="text-lg sm:text-xl md:text-2xl font-semibold mb-3" data-i18n="projects.bonsai.title">Bonsai</h2>
+                    <p data-i18n="projects.bonsai.description"></p>
+                </div>
+
                 <div class="contact-box p-4 sm:p-1">
                     <p id="location" class="mb-4" data-i18n="contact.location"></p>
                     <div class="flex flex-wrap justify-center md:justify-start gap-3 sm:gap-6">
@@ -61,7 +66,7 @@
                             <span data-i18n="contact.github"></span>
                         </a>
                     </div>
-                    <p class="text-sm text-gray-400 text-center md:text-left" data-i18n="contact.kvk"></p>
+                    <p class="kvk-number text-sm text-gray-400" data-i18n="contact.kvk"></p>
                 </div>
             </div>
         </div>
