--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
         </button>
     </nav>
 
+    <nav class="fixed top-0 left-0 p-4 hidden sm:block">
+        <a href="presentations/index.html" class="bg-transparent border border-primary-color text-primary-color px-4 py-2 rounded hover:bg-primary-color hover:text-background-color transition-colors inline-flex items-center gap-2">
+            <i class="fas fa-chalkboard-teacher"></i>
+            <span data-i18n="nav.presentations">Presentations</span>
+        </a>
+    </nav>
+
     <div class="container max-w-6xl mx-auto px-4 sm:px-6 min-h-screen flex items-center mt-8 sm:mt-16">
         <div class="flex flex-col md:flex-row items-center gap-8 fade-in">
             <div class="profile-section md:w-1/2">
