Changed 'Bonsai' to 'Enoki'

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 </div>
 
                 <div class="project-section text-sm sm:text-base md:text-lg space-y-3 sm:space-y-4 max-w-3xl text-center md:text-left px-2 sm:px-4 mt-6">
-                    <h2 class="text-lg sm:text-xl md:text-2xl font-semibold mb-3" data-i18n="projects.bonsai.title">Bonsai</h2>
-                    <p data-i18n="projects.bonsai.description"></p>
+                    <h2 class="text-lg sm:text-xl md:text-2xl font-semibold mb-3" data-i18n="projects.enoki.title">Enoki</h2>
+                    <p data-i18n="projects.enoki.description"></p>
                 </div>
 
                 <div class="contact-box p-4 sm:p-1">
