Removed unncessary files

--- a/presentations/index.html
+++ b/presentations/index.html
@@ -92,29 +92,19 @@
 
         <main class="content">
             <!-- Sample presentation -->
-            <div class="presentation-card">
+            <!-- <div class="presentation-card">
                 <h3>Sample Presentation</h3>
                 <p>A template presentation showing your theme and structure. Replace with your actual presentations.</p>
                 <a href="slides/sample/index.html" class="presentation-link">View Presentation</a>
-            </div>
+            </div> -->
             
             <!-- Add more presentations here -->
             <div class="presentation-card">
-                <h3>Your Next Presentation</h3>
-                <p>Description of your presentation topic and key takeaways.</p>
-                <a href="slides/frictie-als-feature/index.html" class="presentation-link">View Presentation</a>
+                <h3>Frictie als Feature</h3>
+                <p>Over de wenselijkheid van (sociale) frictie in interacties en hoe dit te ontwerpen.</p>
+                <a href="slides/frictie-als-feature/index.html" class="presentation-link">Bekijk presentatie</a>
             </div>
         </main>
-
-        <footer class="footer">
-            <div class="sustainability">
-                <span>🌱</span>
-                <span>Sustainable Presentations</span>
-            </div>
-            <div class="carbon-counter">
-                Optimized for minimal environmental impact
-            </div>
-        </footer>
     </div>
 </body>
 </html>
