MAde changes to presentation

--- a/presentations/slides/frictie-als-feature/index.html
+++ b/presentations/slides/frictie-als-feature/index.html
@@ -63,10 +63,11 @@
             <!-- Anecdote about Van Nelle factory and the disappearing coffee lady -->
             <section>
                 <section>
-                <div class="image-slide">
+                <div>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Rotterdam_van_nelle_fabriek.jpg" 
                          alt="Van Nelle Factory Rotterdam" 
-                         style="width: 100%;">
+                         class="slide-image"
+                         style="width: 80%;">
                     <p class="image-attribution">
                         <small>Photo: F.Eveleens (2001) | CC BY 3.0 | <a href="https://commons.wikimedia.org/wiki/File:Rotterdam_van_nelle_fabriek.jpg">Wikimedia Commons</a></small>
                     </p>
