Added a section "About my work"

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         </header>
 
         <main class="content">
+            <!-- Business Section -->
+            <section class="content-card">
+                <h2 data-i18n="business_title">About My Work</h2>
+                <p class="business-description" data-i18n="business_description">As a freelancer, I operate under the company name 'CasuarIO', inspired by the legendary Australian cassowary bird. Together with <a href="https://spatiality.nl/" target="_blank" rel="noopener noreferrer" class="inline-link">Kamiel Verhelst</a>, we founded <a href="https://www.enoki-ai.nl/" target="_blank" rel="noopener noreferrer" class="inline-link">Enoki</a>, which helps organizations implement value-aligned responsible AI solutions.</p>
+            </section>
             <!-- Expertise Section -->
             <section class="content-card">
                 <h2 data-i18n="expertise_title">Expertise & Passions</h2>
