--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
                 <button data-lang="nl" class="lang-btn" data-i18n="lang_nl">NL</button>
             </div>
             <p class="intro" data-i18n="intro">Hi! I'm Sytze, a tech specialist with a passion for making complex concepts accessible.</p>
-            <p class="tagline" data-i18n="tagline">With a background in Geo-Information Sciences (GIS) and Information Sciences, I bridge technical and social worlds. I simplify complex technology into understandable language and connect different disciplines through clear communication.</p>
+            <div class="tagline-content">
+                <img src="assets/images/profile_photo_Sytze.jpg" alt="Sytze Simonse" class="profile-photo">
+                <p class="tagline" data-i18n="tagline">With a background in Geo-Information Sciences (GIS) and Information Sciences, I bridge technical and social worlds. I simplify complex technology into understandable language and connect different disciplines through clear communication.</p>
+            </div>
         </header>
 
         <main class="content">
