Added projects section with first project (De Aarde aan Tafel)

--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
                 </div>
             </section>
 
+            <!-- Projects Section -->
+            <section class="content-card">
+                <h2 data-i18n="projects_title">Projects</h2>
+                <div class="projects-container">
+                    <div class="project-card">
+                        <h3 data-i18n="project_aarde_title">De Aarde aan Tafel</h3>
+                        <p class="project-description" data-i18n="project_aarde_description">A RAG-based chatbot for climate and sustainability queries that gives a voice to the Earth. Built with FastAPI, Langchain, and Ollama to make environmental knowledge more accessible.</p>
+                        <a href="https://gaia.enoki-ai.nl/" target="_blank" rel="noopener noreferrer" class="project-link" data-i18n="project_link_demo">View Demo</a>
+                    </div>
+                </div>
+            </section>
+
             <!-- Languages Section -->
             <section class="content-card">
                 <h2 data-i18n="languages_title">Languages</h2>
