Added "Writings" section and make some styling changes

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                 <h2 data-i18n="expertise_title">Expertise & Passions</h2>
                 <div class="skill-container">
                     <span class="skill-tag" data-i18n="skill_gis">GIS & Geo-Data</span>
-                    <span class="skill-tag" data-i18n="skill_foss">FOSS Tools</span>
+                    <span class="skill-tag" data-i18n="skill_foss">FOSS</span>
                     <span class="skill-tag" data-i18n="skill_education">Technical Education</span>
+                    <span class="skill-tag" data-i18n="skill_ai">AI & Machine Learning</span>
                 </div>
             </section>
 
@@ -56,9 +57,17 @@
                 </div>
             </section>
 
+            <!-- Writings Section -->
+            <section class="content-card">
+                <h2 data-i18n="writings_title">Writings</h2>
+                <p class="writings-description" data-i18n="writings_description">I write about technology, sustainability, GIS, and the intersection of technical innovation with social impact. My articles explore how we can make complex technological concepts more accessible and meaningful.</p>
+                <a href="writings/index.html" class="writings-link" data-i18n="writings_link">View Articles</a>
+            </section>
+
             <!-- Languages Section -->
             <section class="content-card">
                 <h2 data-i18n="languages_title">Languages</h2>
+                <p class="languages-description" data-i18n="languages_description">I study languages to connect with people from different cultures and backgrounds through their native tongue. Language is a bridge that enables deeper understanding and meaningful connections across cultural boundaries.</p>
                 <div class="skill-container">
                     <span class="skill-tag" data-i18n="dutch_native">🇳🇱 Dutch (Native)</span>
                     <span class="skill-tag" data-i18n="english_c2">🇬🇧 English (C2)</span>
