Move .nojekyll to root directory to fix GitHub Pages

--- a/index.html
+++ b/index.html
@@ -116,5 +116,6 @@
 
     <script src="assets/js/translations.js"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/snake-animation.js"></script>
 </body>
 </html>
