Added snake animation but commented the script out

--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@
     </div>
 
     <script src="assets/js/translations.js"></script>
-    <script src="assets/js/script.js"></script>
-    <script src="assets/js/snake-animation.js"></script>
+    <!-- <script src="assets/js/snake-animation.js"></script> -->
 </body>
 </html>
