Updated the simulation

--- a/interactive/scenes/scene-arrest.html
+++ b/interactive/scenes/scene-arrest.html
@@ -9,35 +9,21 @@
                 <div class="arrest-explanation">
                     <p><strong>Hoe kon de politie je vinden?</strong></p>
 
-                    <p>Bij cybercriminaliteit denken veel jongeren dat ze anoniem zijn. Dat klopt niet. De politie heeft verschillende manieren om je te traceren:</p>
+                    <p>Veel jongeren denken dat ze bij cybercriminaliteit anoniem zijn. Dat klopt niet. De politie heeft meerdere manieren om iemand te traceren:</p>
 
                     <ul class="arrest-list">
-                        <li><strong>IP-adres traceren:</strong> Elk apparaat heeft een uniek IP-adres. Zonder VPN of Tor-browser is je echte locatie en identiteit eenvoudig te achterhalen.</li>
-                        <li><strong>Digitale sporen:</strong> Bij elk inloggen, downloaden of kopen laat je sporen achter in logbestanden van websites en servers.</li>
-                        <li><strong>Bankgegevens:</strong> Als je producten laat bezorgen, zijn er adressen en betaalgegevens die naar jou leiden.</li>
-                        <li><strong>Telecomdata:</strong> Je mobiele provider registreert welke websites je bezoekt en wanneer.</li>
-                        <li><strong>Opsporingsteams:</strong> Nederland heeft gespecialiseerde cybercrime-teams die deze zaken serieus onderzoeken.</li>
+                        <li><strong>IP-adres traceren:</strong> Elk netwerk heeft een eigen IP-adres. Zonder VPN of Tor kan dit via de internetprovider worden gekoppeld aan jouw naam en adres.</li>
+                        <li><strong>Digitale sporen:</strong> Bij elk inloggen, downloaden of aankopen laat je gegevens achter in logbestanden en servers.</li>
+                        <li><strong>Bank- en bezorggegevens:</strong> Betaalgegevens, afleveradressen of zelfs cryptotransacties kunnen naar jou leiden.</li>
+                        <li><strong>Telecomdata:</strong> Providers bewaren metadata, zoals welke IP-adressen je bezocht, wanneer en vanaf welke locatie.</li>
+                        <li><strong>Opsporingsteams:</strong> Nederland heeft gespecialiseerde cybercrime-teams, zoals het Team High Tech Crime, die actief jongeren opsporen en vervolgen.</li>
                     </ul>
 
-                    <div class="arrest-reality">
-                        <h3>⚖️ De realiteit</h3>
-                        <p>In werkelijkheid worden jaarlijks honderden jongeren aangehouden voor cybercriminaliteit. Een strafblad kan je toekomst ernstig beperken:</p>
-                        <ul>
-                            <li>Studiemogelijkheden (bepaalde opleidingen weigeren studenten met strafblad)</li>
-                            <li>Banen (veel werkgevers vragen om Verklaring Omtrent het Gedrag)</li>
-                            <li>Reizen (sommige landen weigeren toegang aan mensen met crimineel verleden)</li>
-                        </ul>
-                    </div>
-
                     <div class="arrest-help">
-                        <h3>💡 Hulp nodig?</h3>
-                        <p>Twijfel je of ben je al betrokken bij cybercriminaliteit? Praat erover met iemand die je vertrouwt of zoek hulp:</p>
-                        <ul>
-                            <li><strong>Je ouders of verzorgers</strong></li>
-                            <li><strong>Een vertrouwenspersoon op school</strong></li>
-                            <li><strong>Helpwanted.nl</strong> - Anonieme hulplijn voor cybercriminaliteit</li>
-                            <li><strong>Politie.nl</strong> - Informatie over cybercrime en melding</li>
-                        </ul>
+                        <h3>💡 Meer leren?</h3>
+                        <p>Wil je begrijpen waarom cybercriminaliteit aantrekkelijk lijkt — en wat de ethische keuzes daarachter zijn?</p>
+                        <p>Bekijk de gratis lesmodules over Cyberethiek van Stichting Praktijkleren:</p>
+                        <p><strong><a href="https://www.stichtingpraktijkleren.nl/cyberethiek/" target="_blank" style="color: #ff6b35;">👉 https://www.stichtingpraktijkleren.nl/cyberethiek/</a></strong></p>
                     </div>
                 </div>
 
