--- a/interactive/scenes/scene-telegram.html
+++ b/interactive/scenes/scene-telegram.html
@@ -60,7 +60,7 @@
                 <div class="message-content">
                     <p>🔥 Nieuwe batch <span class="tooltip-trigger" data-term="logs">logs</span> binnen!</p>
                     <p>📊 5000+ <span class="tooltip-trigger" data-term="leads">leads</span> beschikbaar</p>
-                    <p>💳 Premium <span class="tooltip-trigger" data-term="combolijst">combolijsten</span> en <span class="tooltip-trigger" data-term="binlist">binlists</span></p>
+                    <p>💳 Premium <span class="tooltip-trigger" data-term="combolijst">combolijsten</span> en binlists</span></p>
                 </div>
             </div>
         </div>
