--- a/interactive/index.html
+++ b/interactive/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>De Verleiding - Cybercrime Educatie</title>
+    <title>Computerkruimeldief: Een educatieve simulatie</title>
     <meta name="description" content="Educatieve interactieve game over cybercriminaliteit voor jongeren">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -23,7 +23,6 @@
     <!-- Component: Legal Warning Modal -->
     <div class="legal-warning-modal hidden" id="legal-warning-modal">
         <div class="legal-warning-box">
-            <button class="legal-warning-close" id="legal-warning-close">✕</button>
             <div class="legal-warning-header">
                 <span class="legal-warning-icon">⚠️</span>
                 <h2 class="legal-warning-title" id="legal-warning-title"></h2>
@@ -31,10 +30,7 @@
             <div class="legal-warning-content" id="legal-warning-content"></div>
             <div class="legal-warning-footer">
                 <button class="legal-warning-btn-acknowledge" id="legal-warning-acknowledge">
-                    Ik begrijp
-                </button>
-                <button class="legal-warning-btn-cancel" id="legal-warning-cancel">
-                    Annuleren
+                    Ga verder
                 </button>
             </div>
         </div>
@@ -47,6 +43,7 @@
         // Load scenes from external files and insert into template
         document.addEventListener('DOMContentLoaded', async () => {
             const sceneFiles = [
+                'scenes/scene-start.html',
                 'scenes/scene-whatsapp.html',
                 'scenes/scene-telegram.html',
                 'scenes/scene-home.html',
