Add interactive simulation and fixed

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@ text-decoration-line: underline" href="#contact">Contact</a>
         <!-- My articles -->
         <section id="my_articles">
             <h2 class="text-3xl mb-2 border-b-2 border-black">My articles</h2>
-            <ul>
-                <li>Computerkruimeldief (October, 2025) - Available in </li>
-                <li>De Weg van Water (October, 2025) - Available in </li>
+            <ul class="ml-8 list-disc space-y-2">
+                <li><a href="interactive/" class="text-blue-600 hover:text-blue-800 underline font-semibold">De Computerkruimeldief</a> - Interactive educatieve simulatie over cybercriminaliteit (2024)</li>
+                <li>De Weg van Water (October, 2025) - Coming soon</li>
             </ul>
         </section>
 
