--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body class="max-w-4xl mt-16 mb-8 font-mono mx-auto p-4 border-black-50 border-2">
+
+
     <!-- HEADER -->
     <header class="bg-teal-200 text-left p-5 grid grid-cols-3">
         <h1 class="text-4xl ">[ Sytze Simonse ]</h1>
@@ -43,7 +45,7 @@ text-decoration-line: underline" href="#contact">Contact</a>
                     I am working part-time for maritime contractor Van Oord as geodata engineer.
                     Currently, I am pursuing a one year part-time study investigative journalism.
                     It is my ambition to publish about pressing issues in the field of tech. 
-                    I am quite curious, and love to learn new skills in the field of cyber, programming and AI. 
+                    I am quite curious, and I am honing my skills in the field of security, OSINT and AI. 
                     </p>
                 <!-- More about my programming -->
                 <p class="mt-2">
@@ -69,7 +71,7 @@ text-decoration-line: underline" href="#contact">Contact</a>
         <section id="my_projects">
             <h2 class="text-3xl mb-2 border-b-2 border-black">My projects</h2>
             <p>You can hire me as a freelance web developer and data analyst.
-                I also make ((geo)data)visualisations: static <em>and</em> interactive web maps.</p>
+
             <p class="mt-2">Some of my recent projects:</p>
             <div id="projects" class="grid gap-2">
                 <div class="border-2 border-black p-2 bg-teal-100 text-center hover:bg-teal-300" id="project_1"><a href="https://hoopzaaiers.nl/">Website for Hoopzaaiers</a></div>
@@ -96,8 +98,8 @@ text-decoration-line: underline" href="#contact">Contact</a>
         <section id="my_articles">
             <h2 class="text-3xl mb-2 border-b-2 border-black">My articles</h2>
             <ul class="ml-8 list-disc space-y-2">
-                <li><a href="interactive/" class="text-blue-600 hover:text-blue-800 underline font-semibold">De Computerkruimeldief</a> - Interactive educatieve simulatie over cybercriminaliteit (2024)</li>
-                <li>De Weg van Water (October, 2025) - Coming soon</li>
+                <li><a href="https://www.smallstreammedia.nl/artikel/ssm/154521/computerkruimeldieven-worden-vrijwel-niet-geweerd" class="text-blue-600 hover:text-blue-800 underline font-semibold">De Computerkruimeldief</a> - Small Stream Media, December 2025</li>
+                <!-- <li>De Weg van Water</li> -->
             </ul>
         </section>
 
@@ -111,7 +113,8 @@ text-decoration-line: underline" href="#contact">Contact</a>
 
     </main>
     <footer class="h-full text-xs border-t-2 pt-4 text-center">
-        <p>© 2025 Sytze Simonse. This site is 100% hand-coded and hosted on GitHub Pages.</p>
+        <p>© 2025 Sytze Simonse. This site is hand-coded, without the use of generative AI, and hosted on GitHub Pages.</p>
+
         <p class="pt-2">This website follows the <a href="https://brutalist-web.design/#detailed-guidelines">guidelines on brutalist
                 webdesign.</a></p>
     </footer>
