--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@ text-decoration-line: underline" href="#contact">Contact</a>
             <div class="col-span-3">
                 <h2 class="text-3xl mb-2 border-b-2 border-black">About</h2>
                 <p class="">
-                    Graduated in Geo-Information Sciences (MSc) at Wageningen University.
-                    I am working part-time for maritime contractor Van Oord as geodata engineer.
-                    Currently, I am pursuing a one year part-time study investigative journalism.
-                    It is my ambition to publish about pressing issues in the field of tech. 
-                    I am quite curious, and I am honing my skills in the field of security, OSINT and AI. 
+                    Graduated in <b>Geo-Information Sciences (MSc)</b> at Wageningen University. 
+                    I do freelance developing and consultancy work on generative AI, and I work as geodata engineer for maritime contractor Van Oord.
+                    At the moment, I am pursuing a one year part-time study <b>investigative journalism</b>.
+                    I write and publish about topics in the field of tech, such as digital civil rights and AI accountability. 
+                    I like to improve my skills in the field of security and OSINT, and I study foreign languages - Portugues and Russian - on the side.
                     </p>
                 <!-- More about my programming -->
                 <p class="mt-2">
@@ -84,7 +84,7 @@ text-decoration-line: underline" href="#contact">Contact</a>
             <h2 class="text-3xl mb-2 border-b-2 border-black">Contact</h2>
             <p>Good news: there are plenty of ways to get into touch with me!</p>
             <ul class="ml-8 mt-3 list-disc">
-                <li>By sending me a message on <a href="" class="text-decoration-line: underline">LinkedIn</a>, for
+                <li>By sending me a message on <a href="https://www.linkedin.com/in/sytze-simonse-935955105/" class="text-decoration-line: underline">LinkedIn</a>, for
                     example</li>
                 <li>With an old-skool e-mail, either to:</li>
                 <ul class="ml-4 mt-3 text-base">
@@ -98,8 +98,8 @@ text-decoration-line: underline" href="#contact">Contact</a>
         <section id="my_articles">
             <h2 class="text-3xl mb-2 border-b-2 border-black">My articles</h2>
             <ul class="ml-8 list-disc space-y-2">
-                <li><a href="https://www.smallstreammedia.nl/artikel/ssm/154521/computerkruimeldieven-worden-vrijwel-niet-geweerd" class="text-blue-600 hover:text-blue-800 underline font-semibold">De Computerkruimeldief</a> - Small Stream Media, December 2025</li>
-                <!-- <li>De Weg van Water</li> -->
+                <li>[NL] <a href="https://www.smallstreammedia.nl/artikel/ssm/154521/computerkruimeldieven-worden-vrijwel-niet-geweerd" class="text-blue-600 hover:text-blue-800 underline font-semibold">De Computerkruimeldief</a> - Small Stream Media, December 2025</li>
+                <li>[NL] <a href="/articles/nl/weg_van_water.html">De Weg van Water</a> - Submission for essay competition</li>
             </ul>
         </section>
 
