Add A-Lab article

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@ text-decoration-line: underline" href="#contact">Contact</a>
             <h2 class="text-3xl mb-2 border-b-2 border-black">My articles</h2>
             <ul class="ml-8 list-disc space-y-2">
                 <li>[NL] <a href="https://www.smallstreammedia.nl/artikel/ssm/154521/computerkruimeldieven-worden-vrijwel-niet-geweerd" class="text-blue-600 hover:text-blue-800 underline font-semibold">De Computerkruimeldief</a> - Small Stream Media, December 2025</li>
+                <li>[NL] <a href="www.a-lab.nl/stories/lichaam-als-laatste-grens" class="text-blue-600 hover:text-blue-800 underline font-semibold">Het lichaam als laboratorium van de toekomst</a> - A-Lab, November 2025</li>
                 <li>[NL] <a href="/articles/nl/weg_van_water.html">De Weg van Water</a> - Submission for essay competition</li>
             </ul>
         </section>
