--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sytze's Site</title>
-    <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="./dist/output.css" rel="stylesheet">
 </head>
 
-<body class="max-w-4xl mt-16 mb-8 font-mono mx-auto p-4 border-black-50 border-2">
-
+<body class="max-w-4xl mt-16 mb-8 font-caption mx-auto p-4 border-black-50 border-2">
 
     <!-- HEADER -->
-    <header class="bg-teal-200 text-left p-5 grid grid-cols-3">
+    <header class="bg-brand-300 text-left p-5 grid grid-cols-3">
         <h1 class="text-4xl ">[ Sytze Simonse ]</h1>
+        <h1></h1>
         <h2 class="text-2xl pt-3">
             Geodata, Tech & Journalism</h2>
-        <span class='pr-5 text-8xl text-right'>&#x1F573;</span>
+        <!-- <span class='pr-5 text-8xl text-right'>&#x1F573;</span> -->
     </header>
 
     <!-- NAVIGATION -->
@@ -29,7 +29,7 @@ text-decoration-line: underline" href="#about_me">About me</a>
 text-decoration-line: underline" href="#my_projects">My projects</a>
         <span class="mx-1">|</span>
         <a class="hover:font-semibold 	
-text-decoration-line: underline" href="#my_articles">My articles</a>
+text-decoration-line: underline" href="#my_articles">My writings</a>
         <span class="mx-1">|</span>
         <a class="hover:font-semibold 	
 text-decoration-line: underline" href="#contact">Contact</a>
@@ -40,7 +40,7 @@ text-decoration-line: underline" href="#contact">Contact</a>
         <section id="about_me" class="grid grid-cols-3">
             <div class="col-span-3">
                 <h2 class="text-3xl mb-2 border-b-2 border-black">About</h2>
-                <p class="">
+                <p class="font-(family-name:--roboto)">
                     Graduated in <b>Geo-Information Sciences (MSc)</b> at Wageningen University. 
                     I do freelance developing and consultancy work on generative AI, and I work as geodata engineer for maritime contractor Van Oord.
                     At the moment, I am pursuing a one year part-time study <b>investigative journalism</b>.
@@ -96,8 +96,9 @@ text-decoration-line: underline" href="#contact">Contact</a>
 
         <!-- My articles -->
         <section id="my_articles">
-            <h2 class="text-3xl mb-2 border-b-2 border-black">My articles</h2>
+            <h2 class="text-3xl mb-2 border-b-2 border-black">My writings</h2>
             <ul class="ml-8 list-disc space-y-2">
+                 <li>[NL] <a href="https://www.groene.nl/artikel/post-week-50-2025-12-10" class="text-blue-600 hover:text-blue-800 underline font-semibold">Reaction to article 'Dommer dan AI'</a> - De Groene Amsterdammer, December 2025</li>
                 <li>[NL] <a href="https://www.smallstreammedia.nl/artikel/ssm/154521/computerkruimeldieven-worden-vrijwel-niet-geweerd" class="text-blue-600 hover:text-blue-800 underline font-semibold">De Computerkruimeldief</a> - Small Stream Media, December 2025</li>
                 <li>[NL] <a href="www.a-lab.nl/stories/lichaam-als-laatste-grens" class="text-blue-600 hover:text-blue-800 underline font-semibold">Het lichaam als laboratorium van de toekomst</a> - A-Lab, November 2025</li>
                 <li>[NL] <a href="/articles/nl/weg_van_water.html">De Weg van Water</a> - Submission for essay competition</li>
